The .text-view class no longer goes out of bounds

--- a/undisk/static/css/style.css
+++ b/undisk/static/css/style.css
@@ -53,4 +53,8 @@ body {
 .text-view {
     text-align: left;
     margin-top: 20px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    max-width: 100%;
+    overflow: auto;
 }
